# webrtc-rtp-forwarder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-test.yml
patch/: webrtc.diff
protos/: CMakeLists.txt  r5.proto
sample/: main.go
sample/r5/: r5.pb.go
src/: call_data_status.cpp  call_data_status.h  helpers.cpp  helpers.h  log.cpp  log.h  peer.cpp  peer.h  r5.cpp  r5_audio_decoder_factory.cpp  r5_audio_decoder_factory.h  r5_call_data_create_peer.cpp  r5_call_data_create_peer.h  r5_call_data_destroy_peer.cpp  r5_call_data_destroy_peer.h  r5_call_data_interface.h  r5_call_data_set_remote_description.cpp  r5_call_data_set_remote_description.h  r5_client.cpp  r5_grpc_service_proxy.h  r5_peer_container.cpp  r5_peer_container.h  r5_peer_factory.cpp  r5_peer_factory.h  r5_peer_interface.h  r5_peer_parameter.h  r5_rtp_packet_sender.cpp  r5_rtp_packet_sender.h  r5_rtp_packet_sender_factory.cpp  r5_rtp_packet_sender_factory.h  r5_rtp_payload_type.h  r5_sdp_observer_interface.h  r5_video_decoder_factory.cpp  r5_video_decoder_factory.h
test/: helpers_test.cpp  mocks.h  r5_audio_decoder_factory_test.cpp  r5_call_data_create_peer_test.cpp  r5_call_data_destroy_peer_test.cpp  r5_call_data_set_remote_description_test.cpp  r5_peer_container_test.cpp  r5_peer_factory_test.cpp  r5_rtp_packet_sender_factory_test.cpp  r5_video_decoder_factory_test.cpp  webrtc_jsep_session_description_test.cpp
